[tool.poetry]
name = "ping-a-bub"
version = "0.1.0"
description = ""
authors = ["woodFordR <adam@kaewell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.31.1"
fastapi = "^0.115.2"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
