[tool.poetry]
name = "ping-a-bub"
version = "0.1.0"
description = ""
authors = ["woodFordR <adam@kaewell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.31.1"
fastapi = "^0.115.2"
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
tortoise-orm = "^0.21.6"
aerich = "^0.7.2"
httpx = "^0.27.2"
asgi-lifespan = "^2.1.0"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
